wip: everything but the release of the lock on a timeout works. this is a massive pain to do with an all in one since I don't know what grabs the lock in parallel with a timeout. I think I still need the split operation, but perhaps each lock has a claim object on it that it interacts with is better?
